[gd_scene load_steps=4 format=3 uid="uid://dcvugmy4527x3"]

[ext_resource type="Script" uid="uid://bjn75ka0qsmmh" path="res://editor/normal_suntome_node/suntome_para_node_panel.gd" id="1_ikly5"]
[ext_resource type="Theme" uid="uid://1adxjbws8hdd" path="res://editor/editor_theme.tres" id="2_kxx8q"]
[ext_resource type="Texture2D" uid="uid://dvhacktl4php6" path="res://editor/icon/add_32.png" id="3_b3f3i"]

[node name="SuntomeParaNodePanel" type="VBoxContainer"]
script = ExtResource("1_ikly5")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "add param"
horizontal_alignment = 2

[node name="button_add" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
theme = ExtResource("2_kxx8q")
icon = ExtResource("3_b3f3i")
icon_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
theme = ExtResource("2_kxx8q")

[node name="CtrlContainer" type="VBoxContainer" parent="PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
